Adding static, index, st module

--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>WebAmp :: For the non-blocking love of music</title>
-		<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css"></link>
+		<link rel="stylesheet" href="/static/third-party/bootstrap/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" href="/static/css/style.css"></link>
 	</head>
 	<body>
@@ -15,7 +15,7 @@
 			</header>
 
 			<div id="main" class="clearfix">
-				{{<}}
+				Something goes here i guess
 			</div><!-- #main -->
 
 			<footer id="footer">
