--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,8 @@
 		<title>WebAmp :: For the non-blocking love of music</title>
 		<link rel="stylesheet" href="/static/third-party/bootstrap/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" href="/static/css/style.css"></link>
+		<script src="/static/third-party/jquery/jquery-1.7.2.min.js"></script>
+		<script src="/static/js/webamp.js"></script>
 	</head>
 	<body>
 		<div class="container">
