Keyboard shortcuts, yay mousetrap
also: debug mode is ON

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="/static/third-party/bootstrap/css/bootstrap-responsive.min.css"></link>
 		<link rel="stylesheet" href="/static/css/style.css"></link>
 		<script src="/static/third-party/jquery/jquery-1.7.2.min.js"></script>
+		<script src="/static/third-party/mousetrap/mousetrap.min.js"></script>
 		<script src="/static/js/webamp.js"></script>
 	</head>
 	<body>
