Basic playlist support and album art

--- a/site/index.html
+++ b/site/index.html
@@ -25,11 +25,14 @@
 
 		</div><!-- .container -->
 		<footer id="footer" class="row-fluid">
-			<ul id="nowplaying" class="span4">
-				<li class="artist"></li>
-				<li class="album"></li>
-				<li class="song"></li>
-			</ul>
+			<div id="nowplaying" class="span4">
+				<img src="" class="album-art" width="56" height="56" />
+				<ul>
+					<li class="artist"></li>
+					<li class="album"></li>
+					<li class="song"></li>
+				</ul>
+			</div>
 			<audio controls preload="auto" autobuffer class="span8"></audio>
 		</footer>
 	</body>
