Clear stuff after the last song of an album ends

--- a/site/index.html
+++ b/site/index.html
@@ -26,11 +26,11 @@
 		</div><!-- .container -->
 		<footer id="footer" class="row-fluid">
 			<div id="nowplaying" class="span4">
-				<img src="" class="album-art" width="56" height="56" />
+				<img src="/static/img/black.png" class="album-art noborder" width="56" height="56" />
 				<ul>
-					<li class="artist"></li>
-					<li class="album"></li>
 					<li class="song"></li>
+					<li class="album"></li>
+					<li class="artist"></li>
 				</ul>
 			</div>
 			<audio controls preload="auto" autobuffer class="span8"></audio>
