Adding so many themes, thanks bootswatch!

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 		<title>WebAmp :: For the non-blocking love of music</title>
 		<link rel="stylesheet" href="/static/third-party/bootstrap/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" href="/static/third-party/bootstrap/css/bootstrap-responsive.min.css"></link>
+		<link rel="stylesheet" href="" id="theme-css"></link>
 		<link rel="stylesheet" href="/static/css/style.css"></link>
 		<link rel="shortcut icon" type="image/x-icon" href="/testing.ico" class="favicon" />
 		<link rel="icon" type="image/x-icon" href="/testing.ico" class="favicon" />
@@ -14,13 +15,16 @@
 	<body>
 		<div class="container">
 			<header id="header">
+			<select id="themes" style="float:right;">
+				<option>default</option>
+			</select>
 				<div class="banner">
 					<h1><a href="/">WebAmp</a></h1>
 					<span class="caption">Ampache for the web</span>
 				</div>
 				<a href="https://github.com/bahamas10/node-webamp/">Fork on GitHub</a>
-			</header>
 
+			</header>
 			<div id="main" class="clearfix">
 				<div id="data" class="row-fluid">Loading...</div>
 			</div><!-- #main -->
