--- a/site/index.html
+++ b/site/index.html
@@ -9,6 +9,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="/testing.ico" class="favicon" />
 		<link rel="icon" type="image/x-icon" href="/testing.ico" class="favicon" />
 		<script src="/static/third-party/jquery/jquery-1.7.2.min.js"></script>
+		<script src="/static/third-party/jquery/jquery.cookie.js"></script>
 		<script src="/static/third-party/mousetrap/mousetrap.min.js"></script>
 		<script src="/static/js/webamp.js"></script>
 	</head>
