Dropdowns are ugly, us <ul> and divs

--- a/site/index.html
+++ b/site/index.html
@@ -16,9 +16,12 @@
 	<body>
 		<div class="container">
 			<header id="header">
-			<select id="themes" style="float:right;">
-				<option>default</option>
-			</select>
+				<div id="themes">
+					<h5 class="current-theme">default</h5>
+					<ul class="theme-list nav nav-list">
+						<li><a href="#">default</a></li>
+					</ul>
+				</div>
 				<div class="banner">
 					<h1><a href="/">WebAmp</a></h1>
 					<span class="caption">Ampache for the web</span>
