--- a/site/index.html
+++ b/site/index.html
@@ -6,11 +6,10 @@
 		<link rel="stylesheet" href="" id="theme-css"></link>
 		<link rel="stylesheet" href="/static/third-party/bootstrap/css/bootstrap-responsive.min.css"></link>
 		<link rel="stylesheet" href="/static/css/style.css"></link>
-		<link rel="shortcut icon" type="image/x-icon" href="/testing.ico" class="favicon" />
-		<link rel="icon" type="image/x-icon" href="/testing.ico" class="favicon" />
 		<script src="/static/third-party/jquery/jquery-1.7.2.min.js"></script>
 		<script src="/static/third-party/jquery/jquery.cookie.js"></script>
 		<script src="/static/third-party/mousetrap/mousetrap.min.js"></script>
+		<script src="/static/third-party/favicon.min.js"></script>
 		<script src="/static/js/webamp.js"></script>
 	</head>
 	<body>
