--- a/site/index.html
+++ b/site/index.html
@@ -43,7 +43,14 @@
 					<li class="artist"></li>
 				</ul>
 			</div>
-			<audio controls preload="auto" autobuffer class="span8"></audio>
+			<div id="audio" class="span8">
+				<audio controls preload="auto" autobuffer></audio>
+				<div id="controls">
+					<button class="btn btn-mini prev"><i class="icon-white icon-backward"></i></button>
+					<button class="btn btn-mini play"><i class="icon-white icon-play"></i></button>
+					<button class="btn btn-mini next"><i class="icon-white icon-forward"></i></button>
+				</div>
+			</div>
 		</footer>
 	</body>
 </html>
