Adding repeat functionality

--- a/site/index.html
+++ b/site/index.html
@@ -46,9 +46,12 @@
 			<div id="audio" class="span8">
 				<audio controls preload="auto" autobuffer></audio>
 				<div id="controls">
-					<button class="btn btn-mini prev"><i class="icon-white icon-backward"></i></button>
-					<button class="btn btn-mini play"><i class="icon-white icon-play"></i></button>
-					<button class="btn btn-mini next"><i class="icon-white icon-forward"></i></button>
+					<span class="btn-group">
+						<button class="btn btn-mini prev"><i class="icon-white icon-backward"></i></button>
+						<button class="btn btn-mini play"><i class="icon-white icon-play"></i></button>
+						<button class="btn btn-mini next"><i class="icon-white icon-forward"></i></button>
+					</span>
+					<button class="btn btn-mini repeat"><img height="13" width="14" src="/static/img/whiterepeat.png"></button>
 				</div>
 			</div>
 		</footer>
