adding shuffle, making buttons bigger, clean up style

--- a/site/index.html
+++ b/site/index.html
@@ -43,16 +43,19 @@
 					<li class="artist"></li>
 				</ul>
 			</div>
-			<div id="audio" class="span8">
-				<audio controls preload="auto" autobuffer></audio>
+			<div id="audio" class="span2">
 				<div id="controls">
 					<span class="btn-group">
-						<button class="btn btn-mini prev"><i class="icon-white icon-backward"></i></button>
-						<button class="btn btn-mini play"><i class="icon-white icon-play"></i></button>
-						<button class="btn btn-mini next"><i class="icon-white icon-forward"></i></button>
+						<button class="btn prev"><i class="icon-white icon-backward"></i></button>
+						<button class="btn play"><i class="icon-white icon-play"></i></button>
+						<button class="btn next"><i class="icon-white icon-forward"></i></button>
 					</span>
-					<button class="btn btn-mini repeat"><img height="13" width="14" src="/static/img/whiterepeat.png"></button>
+					<button class="btn repeat"><img style="margin-top: -4px" height="13" width="14" src="/static/img/whiterepeat.png"></button>
+					<button class="btn shuffle"><i class="icon-white icon-random"></i></button>
 				</div>
+			</div>
+			<div class="span6">
+				<audio controls preload="auto" autobuffer></audio>
 			</div>
 		</footer>
 	</body>
